Fixnutie .collapsed v niektorych browseroch (#24)

--- a/app/styles/layout/_sections.scss
+++ b/app/styles/layout/_sections.scss
@@ -65,8 +65,8 @@
 .collapsed {
   position: relative;
   overflow: hidden;
-
   max-height: 350px;
+  display: inherit;
 
   &.is-active {
     max-height: none !important;
